Fix treasury layout issue. Fixed day of week clearing.
Workitems:
#14158 004 - Treasury report - Day is not getting removed when clearing the date field
#14160 Treasury report - Filters applied is overlapping with the Invoice amount SubTotal
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C20421

--- a/ShipTech10/app/app-general-components/assets/css/custom.css
+++ b/ShipTech10/app/app-general-components/assets/css/custom.css
@@ -4395,8 +4395,8 @@ th#flat_available_contracts_checkbox > * {
     padding-bottom: 15px;
 }
 
-.row-invoice-amount-treasuryreport {
-    height: 0;
+.row-invoice-amount-treasuryreport .portlet{
+    margin-bottom: 5px;
 }
 
 #tab_0 > div.col-md-12.portlet.light {
